02_base_resources/manifests/picture-of-the-day/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pictures-ratelimit
spec:
  rateLimit:
    average: 20
    burst: 3
    period: 1m
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: picture-of-the-day
  namespace: picture-of-the-day
spec:
  entryPoints:                 
    - internet
  routes:                           
  - kind: Rule
    match: Host(`pictures.nigelvanhattum.nl`) 
    services:                       
    - kind: Service
      name: picture-of-the-day
      namespace: picture-of-the-day
      passHostHeader: true
      port: 8080                     
      responseForwarding:
        flushInterval: 1ms
      strategy: RoundRobin
    middlewares:
      - name: pictures-ratelimit
        namespace: picture-of-the-day  

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: picture-of-the-day-local
  namespace: picture-of-the-day
spec:
  entryPoints:                 
    - websecure
  routes:                           
  - kind: Rule
    match: Host(`pictures.local.nigelvanhattum.nl`) 
    services:                       
    - kind: Service
      name: picture-of-the-day
      namespace: picture-of-the-day
      passHostHeader: true
      port: 8080                     
      responseForwarding:
        flushInterval: 1ms
      strategy: RoundRobin
